# Nuanic_Moodmetric_BLE

./: .gitignore  CHANGELOG.md  Nuanic-sample.csv  README.md  TODO.md  pyproject.toml  pytest_output.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
data/ring_logs/: nuanic_2026-03-24_10-53-25.csv  nuanic_2026-03-24_10-55-27.csv
docs/: csv_format.md  ring_master_guide.md  ring_reverse_engineering_report.md
scripts/: discover_ring_services.py  ring_analyzer_cli.py  ring_logger_cli.py  ring_monitor_cli.py  ring_post_analysis_cli.py
src/nuanic_ring/: __init__.py  _scanner.py  cli.py  cli_entrypoints.py  connector.py  data_analysis.py  discover_services.py  eda_analyzer.py  logger.py  mm_compat.py  monitor.py  moodmetric_parser.py  post_analysis.py  ring_profiles.py  signal_processing.py  waveform_viewer.py
tests/: test_cli_entrypoints.py  test_data_analysis.py  test_mm_compat.py  test_post_analysis.py  test_ring_monitor_cli_contract.py  test_ring_profiles.py  test_scan_default_contracts.py  test_signal_conditioner.py  test_split_csv_logging.py
