[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nuanic-ring"
version = "0.1.0"
description = "Nuanic and Moodmetric BLE ring data extraction SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.22.3",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "scipy>=1.11.4",
    "pandas>=2.2.2",
    "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "black>=23.0"
]

[project.scripts]
nuanic-ring-monitor = "nuanic_ring.cli_entrypoints:ring_monitor"
nuanic-ring-analyzer = "nuanic_ring.cli_entrypoints:ring_analyzer"
nuanic-ring-post-analysis = "nuanic_ring.cli_entrypoints:ring_post_analysis"
nuanic-ring-discover = "nuanic_ring.cli_entrypoints:ring_discover_services"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
