[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nuanic-ring"
version = "0.1.1"
description = "Nuanic and Moodmetric BLE ring data extraction SDK"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Aleph Campos da Silveira", email = "aleph.camposdasilveira@tuni.fi" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
dependencies = [
    "bleak>=0.22.3",
    "scipy>=1.11.4"
]

[project.optional-dependencies]
cli = [
    "rich>=13.7.1",
    "matplotlib>=3.8.4",
    "pandas>=2.2.2",
    "numpy>=1.26.4"
]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "pytest-cov>=4.1",
    "black>=23.0",
    "isort>=5.13.2",
    "nuanic-ring[cli]"
]

[project.urls]
Homepage = "https://github.com/PhelaPoscam/Nuanic_Moodmetric_BLE"
Repository = "https://github.com/PhelaPoscam/Nuanic_Moodmetric_BLE"
"Bug Tracker" = "https://github.com/PhelaPoscam/Nuanic_Moodmetric_BLE/issues"

[project.scripts]
nuanic-ring-monitor = "nuanic_ring.cli:ring_monitor"
nuanic-ring-analyzer = "nuanic_ring.cli:ring_analyzer"
nuanic-ring-post-analysis = "nuanic_ring.cli:ring_post_analysis"
nuanic-ring-discover = "nuanic_ring.discover_services:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
files = "src/nuanic_ring"

